@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-05T01:25:23Z",
-  "count_outdated" : 341,
-  "uniques_outdated" : 216,
+  "timestamp" : "2022-07-05T08:19:16Z",
+  "count_outdated" : 342,
+  "uniques_outdated" : 217,
   "count" : 367,
   "uniques" : 231,
   "clones" : [
-    {
-      "timestamp": "2022-06-21T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 2,
