@@ -1,3 +1,10 @@
+2022-07-05T08:19:16Z:
+* notice: last 14d: unq all: 3 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 216 341 / 231 367
+* notice: next accum: outdated-unq outdated-all / unq all: 217 342 / 231 367
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-06-21] / []
+
 2022-07-05T01:25:23Z:
 * notice: last 14d: unq all: 3 26
 * notice: prev accum: outdated-unq outdated-all / unq all: 215 339 / 230 365
